--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <button><img src="images/search.png" /></button>
       </div>
 
+      <div class="error">
+        <p>Invalid city name</p>
+      </div>
+
       <div class="weather">
         <img src="images/rain.png" class="weather-icon" />
         <h1 class="temp">22°c</h1>
@@ -39,7 +43,7 @@
     </div>
 
     <script>
-      const apiKey = "a45ecc3a148480e4080ae9f157222915";
+      const apiKey = "";
       const apiUrl =
         "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
@@ -49,27 +53,34 @@
 
       async function checkWeather(city) {
         const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
-        var data = await response.json();
 
-        console.log(data);
+        if (response.status == 404) {
+          document.querySelector(".error").style.display = "block";
+          document.querySelector(".weather").style.display = "none";
+        } else {
+          var data = await response.json();
 
-        document.querySelector(".city").innerHTML = data.name;
-        document.querySelector(".temp").innerHTML =
-          Math.round(data.main.temp) + "°c";
-        document.querySelector(".humidity").innerHTML =
-          data.main.humidity + "%";
-        document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+          document.querySelector(".city").innerHTML = data.name;
+          document.querySelector(".temp").innerHTML =
+            Math.round(data.main.temp) + "°c";
+          document.querySelector(".humidity").innerHTML =
+            data.main.humidity + "%";
+          document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
 
-        if (data.weather[0].main == "Clouds") {
-          weatherIcon.src = "images/clouds.png";
-        } else if (data.weather[0].main == "Clear") {
-          weatherIcon.src = "images/clear.png";
-        } else if (data.weather[0].main == "Rain") {
-          weatherIcon.src = "images/rain.png";
-        } else if (data.weather[0].main == "Drizzle") {
-          weatherIcon.src = "images/drizzle.png";
-        } else if (data.weather[0].main == "Mist") {
-          weatherIcon.src = "images/mist.png";
+          if (data.weather[0].main == "Clouds") {
+            weatherIcon.src = "images/clouds.png";
+          } else if (data.weather[0].main == "Clear") {
+            weatherIcon.src = "images/clear.png";
+          } else if (data.weather[0].main == "Rain") {
+            weatherIcon.src = "images/rain.png";
+          } else if (data.weather[0].main == "Drizzle") {
+            weatherIcon.src = "images/drizzle.png";
+          } else if (data.weather[0].main == "Mist") {
+            weatherIcon.src = "images/mist.png";
+          }
+
+          document.querySelector(".weather").style.display = "block";
+          document.querySelector(".error").style.display = "none";
         }
       }
 
